lib/tests/ui/client_without_attr_and_naming_convention.stderr
error: struct needs to have either a field named `inner` or one tagged with `#[jsonrpc_client(inner)]`
  --> $DIR/client_without_attr_and_naming_convention.rs:24:19
   |
24 |   pub struct Client {
   |  ___________________^
25 | |     inner_client: InnerClient,
26 | | }
   | |_^
